# spark-public-colosseum

./: .gitignore  README.md
docs/: MIGRATION-GUIDE.md  apikeys.md  ddl.sql  eligibility.md  github-oauth-setup.md  lbp-init.d2  migrate-add-image-and-analysis.sql  migrate-add-tweet-columns.sql  migrate-add-wallet-to-twitter-users.sql  migrate-local-d1.sql  migrate-remove-unique-constraint.sql  migrations-production.sql  onboarding.md  staking.d2
docs/cloudflare/: cloudflare.md  d1-database.md  r2.md
docs/crypto/: anchor.md  phantom.md  solana-web3.md  solana.md
docs/d2/: d2.md
docs/exchange/: exchange.d2  exchange.md
docs/twitter/: oauth2.md  twitter-oauth-setup.md  twitter-oauth.md  twitter-scraping.md  twitter.d2
frontend/: .env.example  .eslintrc  .prettierrc  POPULATE_AGENT_PROJECTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
frontend/.husky/: commit-msg  commit-msg.py
frontend/TWA/: android.keystore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  app-release-unsigned-aligned.apk  manifest-checksum.txt  twa-manifest.json
frontend/functions/: tsconfig.json
mcp-server/: .env.example  README.md  package-lock.json  package.json  skills.md
onchain/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
onchain/client/: index.ts
onchain/migrations/: deploy.ts
onchain/programs/spark_idea_vault/: Cargo.toml
onchain/programs/spark_idea_vault/src/: lib.rs
onchain/tests/: spark_idea_vault.ts
(+476 files in other folders)
